feat: Integrate QQ Music support with login and download functionalities
- Added QQMusicManager class for handling QQ Music API interactions.
- Implemented login via QR code and phone verification for QQ Music.
- Enhanced UI to support searching and downloading songs from QQ Music.
- Introduced settings for preferred file type for QQ downloads.
- Updated README with installation instructions and usage notes for QQ Music.
- Added configuration management for QQ-specific settings.
- Implemented song and playlist handling for QQ Music.
- Added utility functions for saving QR codes and managing sessions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nonencm"
-version = "0.2.1"
+version = "0.2.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -11,6 +11,7 @@ dependencies = [
     "pillow",
     "pyncm>=1.8.1",
     "pyyaml",
+    "qqmusic-api-python>=0.3.6",
     "segno",
 ]
 
