ci: expand GitHub Actions push trigger paths to `app/**`, `run.py`, and `pyproject.toml` and update `pyproject.toml`.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - main
     paths:
-      - 'app/__main__.py'
+      - 'app/**'
+      - 'run.py'
+      - 'pyproject.toml'
 
 env:
   APP_NAME: nonencm
